# czech

./: genders.py  pyproject.toml
app/: __init__.py  adjectives.py  categories.py  constants.py  dec_first.py  dec_second.py  dec_third.py  declensions.py  exceptions.py  nouns.py  nouns_first.py  nouns_second.py  nouns_third.py  numbers.py  sentences.py  tests.py  verbs.py  verbs_first.py
homeworks/: 23-08-15
