[tool.poetry]
name = "learn_czech"
version = "0.1.0"
description = ""
authors = ["Peter Collins <peter.collins@per.gov.ie>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
